log/build_2024-05-18_18-57-54/doozy_forklift/stderr.log
  File "/home/avinaash/ForkLift_AMR/install/doozy_forklift/lib/python3.8/site-packages/doozy_forklift/dock_with_pallet_09.py", line 149
    self.forward_2,
    ^
SyntaxError: invalid syntax

